Add assignment #1 solution

--- a/02_activities/assignments/assignment_1.ipynb
+++ b/02_activities/assignments/assignment_1.ipynb
@@ -56,32 +56,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This is a function, which we will learn more about next week. For testing purposes, we will write our code in the function\n",
     "def anagram_checker(word_a, word_b):\n",
-    "  # Your code here\n",
-    "\n",
-    "# Run your code to check using the words below:\n",
-    "anagram_checker(\"Silent\", \"listen\")"
+    "    \"\"\"\n",
+    "    Checks if two words are anagrams of each other\n",
+    "    Case insensitive: feel free to use the case you prefer\n",
+    "    Usage: anagram_checker(word_a, word_b)\n",
+    "    \"\"\"\n",
+    "    # Check for null or empty values\n",
+    "    if not word_a or not word_b:\n",
+    "        print('ERROR: One or both of the provided words are empty!')\n",
+    "        return\n",
+    "    # Prepare inputs for comparison using a lower() method\n",
+    "    # Make the words lowercase regardless of the case they were provided in\n",
+    "    # Use sorted() to sort the characters in the words\n",
+    "    word_a_sorted = sorted(word_a.lower())\n",
+    "    word_b_sorted = sorted(word_b.lower())\n",
+    "    # Then compare the sorted words\n",
+    "    if word_a_sorted == word_b_sorted:\n",
+    "        # Return True if the words are anagrams\n",
+    "        return True\n",
+    "    else:\n",
+    "        # Return False if the words are not anagrams\n",
+    "        return False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Empty or `None` values check\n",
+    "In case of empty or `None` values, the function returns `None` (which is not visible in the output) and prints a message"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ERROR: One or both of the provided words are empty!\n"
+     ]
+    }
+   ],
+   "source": [
+    "anagram_checker(\"\", \"Listen\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ERROR: One or both of the provided words are empty!\n"
+     ]
+    }
+   ],
+   "source": [
+    "anagram_checker(\"Silent\",None)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Anagram check\n",
+    "`Silent` and `Night` are not anagrams, `False` is returned"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "anagram_checker(\"Silent\", \"Night\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "`night` and `Thing` are anagrams, `True` is returned"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "anagram_checker(\"night\", \"Thing\")"
    ]
@@ -96,25 +191,225 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def anagram_checker(word_a, word_b, is_case_sensitive):\n",
-    "  # Modify your existing code here\n",
-    "\n",
-    "# Run your code to check using the words below:\n",
-    "anagram_checker(\"Silent\", \"listen\", False) # True"
+    "The `is_case_sensitive` to toggle case sensitivity was added along with `verbose` option, which prints a message when enabled\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "anagram_checker(\"Silent\", \"Listen\", True) # False"
+    "def anagram_checker(word_a, word_b, is_case_sensitive=False, verbose=False):\n",
+    "    \"\"\"\n",
+    "    Checks if two words are anagrams of each other\n",
+    "    Optional parameters: is_case_sensitive (default: False), verbose (default: False)\n",
+    "    Usage: anagram_checker(word_a, word_b, <is_case_sensitive=True|False>, <verbose=True|False>)\n",
+    "    \"\"\"\n",
+    "    # Check for null or empty values\n",
+    "    if not word_a or not word_b:\n",
+    "        print('ERROR: One or both of the provided words are empty!')\n",
+    "        return\n",
+    "    # Optionally prepare inputs for comparison using a lower() method\n",
+    "    # Make the words lowercase depenging on the case sensitivity option provided\n",
+    "    # If is_case_sensitive is True, use the original words\n",
+    "    # If is_case_sensitive is False, make both words lowercase\n",
+    "    # Use sorted() to sort the characters in the words\n",
+    "    word_a_sorted = is_case_sensitive and sorted(word_a) or sorted(word_a.lower())\n",
+    "    word_b_sorted = is_case_sensitive and sorted(word_b) or sorted(word_b.lower())\n",
+    "    # Then compare the sorted words\n",
+    "    if word_a_sorted == word_b_sorted:\n",
+    "        # Print a message if the words are anagrams and verbose mode is enabled\n",
+    "        if verbose:\n",
+    "            print('Provided words ARE anagrams')\n",
+    "            print('Case sensitivity is ' + ('on' if is_case_sensitive else 'off'))\n",
+    "        # Return True if the words are anagrams\n",
+    "        return True\n",
+    "    else:\n",
+    "        # Print a message if the words are not anagrams\n",
+    "        if verbose:\n",
+    "            print('Provided words are NOT anagrams')\n",
+    "            print('Case sensitivity is ' + ('on' if is_case_sensitive else 'off'))\n",
+    "        # Return False if the words are not anagrams\n",
+    "        return False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Case sensitivity check\n",
+    "This one returns `False` as there is a difference in case of `S` and `L` and `is_case_sensitive` is True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "anagram_checker(\"Silent\", \"Listen\", True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "But if we replace `Listen` with `liSten`, it returns `True`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "anagram_checker(\"Silent\", \"liSten\", True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And, it returns `True` if we disable case sensitivity, i.e. set `is_case_sensitive` to `False`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "anagram_checker(\"Silent\", \"liSten\", False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Verbose mode\n",
+    "When `verbose` is `True`, the function prints a message if the words are anagrams and case sensitivity is enabled"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Provided words are NOT anagrams\n",
+      "Case sensitivity is on\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "anagram_checker(\"Silent\", \"Listen\", True, True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Provided words ARE anagrams\n",
+      "Case sensitivity is on\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "anagram_checker(\"Silent\", \"liSten\", True, True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Provided words ARE anagrams\n",
+      "Case sensitivity is off\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "anagram_checker(\"Silent\", \"liSten\", False, True)"
    ]
   },
   {
@@ -144,7 +439,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.9.20"
   }
  },
  "nbformat": 4,
