--- a/02_activities/assignments/assignment_2.ipynb
+++ b/02_activities/assignments/assignment_2.ipynb
@@ -44,7 +44,7 @@
         "- [ ] Reviewed the PR description guidelines and adhered to them.\n",
         "- [ ] Verify that the link is accessible in a private browser window.\n",
         "\n",
-        "If you encounter any difficulties or have questions, please don't hesitate to reach out to our team via our Slack at `#cohort-3-help`. Our Technical Facilitators and Learning Support staff are here to help you navigate any challenges."
+        "If you encounter any difficulties or have questions, please don't hesitate to reach out to our team via our Slack at `#cohort-5-help`. Our Technical Facilitators and Learning Support staff are here to help you navigate any challenges."
       ]
     },
     {
@@ -53,7 +53,7 @@
         "id": "yMsC2qsiKNP8"
       },
       "source": [
-        "**The file is located under `../05_src/data/assignment_2_data/`.**\n",
+        "**The file is located under `../../05_src/data/assignment_2_data/`.**\n",
         "\n",
         "The filtered list has been made for you:\n",
         "\n",
@@ -96,10 +96,29 @@
       },
       "outputs": [],
       "source": [
+        "import os\n",
+        "\n",
+        "all_paths = [\n",
+        "  \"../../05_src/data/assignment_2_data/inflammation_01.csv\",\n",
+        "  \"../../05_src/data/assignment_2_data/inflammation_02.csv\",\n",
+        "  \"../../05_src/data/assignment_2_data/inflammation_03.csv\",\n",
+        "  \"../../05_src/data/assignment_2_data/inflammation_04.csv\",\n",
+        "  \"../../05_src/data/assignment_2_data/inflammation_05.csv\",\n",
+        "  \"../../05_src/data/assignment_2_data/inflammation_06.csv\",\n",
+        "  \"../../05_src/data/assignment_2_data/inflammation_07.csv\",\n",
+        "  \"../../05_src/data/assignment_2_data/inflammation_08.csv\",\n",
+        "  \"../../05_src/data/assignment_2_data/inflammation_09.csv\",\n",
+        "  \"../../05_src/data/assignment_2_data/inflammation_10.csv\",\n",
+        "  \"../../05_src/data/assignment_2_data/inflammation_11.csv\",\n",
+        "  \"../../05_src/data/assignment_2_data/inflammation_12.csv\"\n",
+        "]\n",
+        "\n",
         "with open(all_paths[0], 'r') as f:\n",
-        "    # YOUR CODE HERE: Use the readline() or readlines() method to read the .csv file into 'contents'\n",
-        "    \n",
-        "    # YOUR CODE HERE: Iterate through 'contents' using a for loop and print each row for inspection"
+        "    # Use the readlines() method to read the inflammation_01.csv (first file in the list represented by all_paths[0]) file into 'contents'\n",
+        "    contents = f.readlines()\n",
+        "    # Iterate through 'contents' using a for loop and print each row for inspection\n",
+        "    for row in contents:\n",
+        "        print(row)\n"
       ]
     },
     {
@@ -142,22 +161,25 @@
         "import numpy as np\n",
         "\n",
         "def patient_summary(file_path, operation):\n",
-        "    # load the data from the file\n",
+        "    # Load the data from the file\n",
         "    data = np.loadtxt(fname=file_path, delimiter=',')\n",
-        "    ax = 1  # this specifies that the operation should be done for each row (patient)\n",
+        "    ax = 1  # This specifies that the operation should be done for each row (patient)\n",
         "\n",
-        "    # implement the specific operation based on the 'operation' argument\n",
+        "    # Implement the specific operation based on the 'operation' argument\n",
         "    if operation == 'mean':\n",
-        "        # YOUR CODE HERE: calculate the mean (average) number of flare-ups for each patient\n",
+        "        # Calculate the mean (average) number of flare-ups for each patient\n",
+        "        summary_values = np.mean(data, axis=ax)\n",
         "\n",
         "    elif operation == 'max':\n",
-        "        # YOUR CODE HERE: calculate the maximum number of flare-ups experienced by each patient\n",
+        "        # Calculate the maximum number of flare-ups experienced by each patient\n",
+        "        summary_values = np.max(data, axis=ax)\n",
         "\n",
         "    elif operation == 'min':\n",
-        "        # YOUR CODE HERE: calculate the minimum number of flare-ups experienced by each patient\n",
+        "        # Calculate the minimum number of flare-ups experienced by each patient\n",
+        "        summary_values = np.min(data, axis=ax)\n",
         "\n",
         "    else:\n",
-        "        # if the operation is not one of the expected values, raise an error\n",
+        "        # If the operation is not one of the expected values, raise an error\n",
         "        raise ValueError(\"Invalid operation. Please choose 'mean', 'max', or 'min'.\")\n",
         "\n",
         "    return summary_values"
@@ -171,7 +193,7 @@
       },
       "outputs": [],
       "source": [
-        "# test it out on the data file we read in and make sure the size is what we expect i.e., 60\n",
+        "# Test it out on the data file we read in and make sure the size is what we expect i.e., 60\n",
         "# Your output for the first file should be 60\n",
         "data_min = patient_summary(all_paths[0], 'min')\n",
         "print(len(data_min))"
@@ -264,9 +286,10 @@
         "# Define your function `detect_problems` here\n",
         "\n",
         "def detect_problems(file_path):\n",
-        "  #YOUR CODE HERE: use patient_summary() to get the means and check_zeros() to check for zeros in the means\n",
-        "\n",
-        "  return"
+        "  # Use patient_summary() to get the means\n",
+        "  means = patient_summary(file_path, 'mean')\n",
+        "  # Use check_zeros() to check for zeros in the means\n",
+        "  return check_zeros(means)\n"
       ]
     },
     {
@@ -278,6 +301,19 @@
         "# Test out your code here\n",
         "# Your output for the first file should be False\n",
         "print(detect_problems(all_paths[0]))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# A bit more human-fiendly check implementation\n",
+        "if detect_problems(all_paths[0]):\n",
+        "  print(\"The detect_problems function returned True.\\nThe file contains a patient with a mean inflammation score of 0.\\nCheck the data.\")\n",
+        "else:\n",
+        "  print(\"The detect_problems function returned False.\\nThe file does not contain any patients with a mean inflammation score of 0.\\nThe data is clean.\")"
       ]
     },
     {
